# local-git-repo-manager

./: .gitignore  README.md  TODO.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_lock.rs  fs_tree.rs  git.rs  git_log.rs  git_ops.rs  gitignore.rs  gitignore_templates.rs  lib.rs  main.rs  paths.rs  persistence.rs  settings.rs  shell.rs
src/assets/: base.css
src/components/: AppToast.vue  ContextMenu.vue  FolderDropZone.vue  GitLogPanel.vue
src/components/git/: ArchiveDialog.vue  GitLogEntry.vue  GitignoreEditor.vue  RemoteManagerDialog.vue  TemplatePicker.vue
src/components/project/: CreateProjectModal.vue  DeleteConfirmDialog.vue  ProjectDeleteDialog.vue  ProjectListEmpty.vue  ProjectListItem.vue  RenameProjectDialog.vue
src/components/settings/: SettingsDataRootSection.vue  SettingsDialog.vue  SettingsExternalToolsTable.vue  (+2 more)
src/composables/: bootstrap.ts  pickFolder.ts  readClipboardText.ts  rootFolderProjectPointerMove.ts  useDialogShortcuts.ts  useFolderRootRows.ts
src/i18n/: index.ts
src/layouts/: AppShell.vue
src/pages/: BootGatePage.vue  NotFoundPage.vue  OnboardingPage.vue  ProjectsWorkspacePage.vue
src/router/: guards.ts  index.ts  routes.ts
src/stores/: projects.ts  toast.ts
src/utils/: gitPathTree.ts  gitRemoteClipboard.ts  pathBasename.ts  pathParent.ts  tauriRepoPath.ts
tests/: validate_claude_md.sh  validate_tailwind_poc.sh
(+32 files in other folders)
