[package]
name = "local-git-repo-manager"
version = "1.0.1"
description = "Local Git Repo Manager"
authors = ["you"]
edition = "2021"

[lib]
name = "local_repo_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rayon = "1.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

